# Splittery

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  ERM.drawio  build.gradle.kts  docker-compose.yml  go.mod  hello.go  reset_db.sh  settings.gradle.kts  setup_db.sh
backend/.scripts/: purge-database.sh  reset-database.sh  start-database.sh
backend/.sqlx/: query-0082e96d661357725a959279cf53f0b7c85ebeb87b96d4aaa952448b729c8302.json  query-0c38ba3ea3dbf073ea2266de4d4088d13506c66ed5d11149c642c0fd3053726f.json  query-0eef4f4c01e564cac81ce88076444533f4e94992a4db22e99846b2b3e775bd97.json  query-0fc54f79f9f3fbd994577eb4bc0b9ba47e827b5e628f94d3dfe366cd20efaa3d.json  query-108198e5613fcc400eabc76c68b973ec053aebd9a9ff18492f5dd031ded4e891.json  query-129e35eb6b2be99c8b21e6a93a88ea9cb84b76c8bf16d55f761053a21f3d7296.json  query-15669298a81827eb0b60d709b442038498703def499e9d6d9c8b0a53f601b391.json  query-195ecfd3d4a563357312004c3601cbde06e31978e71d9ce70690b366cfed5fb1.json  query-1c7898690b4d07f6d3320713a4a8e63693409362b3e5cb857654f3bd261e9106.json  query-206b7709827a3be52534274b23882b1c226a45e35d8a2b242883445105c83f5d.json  query-27c034732c5a1feaff40c5044ef3acd281c3d9a054cc97c70406f18cc145e7f5.json  query-2928a0b8fdf50c3b0718de23d530973d12ddb16a88a009d15ad692346ad2a956.json  query-2e70486127f241f8de333018d056192959d3b7ea655c70ecf7e44749b4c42f01.json  query-2e86fc9a5abb9cebedb03889cc9c1347f5c326c4359d8191178efc0a4572d5a2.json  query-2e873bfab7dd4868464bf46ccb89ca2c63b5c125d99e011ed362a2accaf16659.json  query-2f483ada60b2de5dae5b6117f354dd03b014e68a0a768e3d77b226343bddb147.json  query-3b6d224db652494164126f51eb4707f55236e536d55b59bb8d2a1e4ba3682301.json  query-3df4909098155c99763b6db7a4af758ad8bb46e5088a433ca536f715a505c93f.json  query-3e1d14aa44d60061300856ab053fac200a3eaf50cb6cd544225f3578999e97a2.json  query-3e4333837b6acd0c03c64f385b7319f420f4d8f86f369f02c408c544e756f954.json  query-43e1902c880ae4a6d8e62df5564ab0d5affc9892f7d11c212f0659e4a4721870.json  query-4529e60adc5bc8a742ec4f28656850470e7816b6850043fc5d75d6233d5191f7.json  (+59 more)
(+463 files in other folders)
