[package]
name = "share_expenses_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.31"
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-async-std", "runtime-async-std-native-tls", "chrono"] }
tide = "0.16.0"

[features]
allow-cors = []
