[package]
name = "splittery_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "bigdecimal",
] }
bigdecimal = "0.4.8"
anyhow = "1.0.98"
dotenvy = "0.15.7"
bcrypt = "0.17.0"
jsonwebtoken = "9.3"
log = "0.4.27"
env_logger = "0.11.8"
