[package]
name = "splittery_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "bigdecimal",
] }
bigdecimal = "0.4.9"
anyhow = "1.0.100"
dotenvy = "0.15.7"
bcrypt = "0.17.1"
jsonwebtoken = { version= "10.2.0", features = ["rust_crypto"]}
log = "0.4.29"
env_logger = "0.11.8"
